# terminus-nitf-python

./: .gitignore  pyproject.toml
scripts/: setup-venv.sh
test/: test_enums.py  test_utils.py
tmns/nitf/: base.py  core.py  enums.py  fhdr.py  field_types.py  imgseg.py  imsubhdr.py  tre.py  types.py  utils.py
tmns/nitf/apps/tmns_nitf_info/: main.py  plotly.py
tmns/nitf/image/: driver_base.py  factory.py  opj_driver.py
tmns/nitf/tres/: acchzb.py  acftb.py  aimidb.py  bandsb.py  base.py  blocka.py  camsda.py  ccinfa.py  csdida.py  engrda.py  matesa.py  mimcsa.py
